syntax = "proto3";
option go_package = "../pb";

import "transactions.proto";
import "google/protobuf/timestamp.proto";

message DBValidator {
        string peer_id                             = 1;
        uint64 total_stake                         = 2;
        uint64 weighted_stake                      = 3;
        repeated Nullifier nullifiers              = 4;
        uint64 unclaimed_coins                     = 5;
        uint32 epochBLocks                         = 6;
        uint32 stikes                              = 7;
        bool coinbase_penalty                      = 8;
        float expected_blocks                      = 9;
        google.protobuf.Timestamp validator_since = 10;

        message Nullifier {
                bytes hash                           = 1;
                uint64 amount                        = 2;
                uint64 weighted_amount               = 3;
                google.protobuf.Timestamp locktime   = 4;
                google.protobuf.Timestamp blockstamp = 5;
        }
}

message DBBlockNode {
        bytes blockID   = 1;
        uint32 height   = 2;
        int64 timestamp = 3;
}

message DBAccumulator {
        repeated bytes accumulator        = 1;
        uint64 nElements                  = 2;
        repeated InclusionProof proofs    = 3;
        repeated LookupMap lookupMap      = 4;

        message InclusionProof {
                bytes key             = 1;
                bytes id              = 2;
                uint64 index          = 3;
                repeated bytes hashes = 4;
                uint64 flags          = 5;
                bytes last            = 6;
        }

        message LookupMap {
              bytes key    = 1;
              uint64 index = 2;
        }
}
